Examination defined by UUID instead of DB ID
