# backend/src/main/resources/doc/openapi.json
@@ -1169,9 +1169,10 @@
                 "type": "object",
                 "description": "Examination object to update or create an object",
                 "properties": {
-                    "id": {
-                        "type": "integer",
-                        "format": "int64"
+                    "uuid": {
+                        "format": "int64",
+                        "type": "string",
+                        "nullable": true
                     },
                     "type": {
                         "$ref": "#/components/schemas/ExaminationTypeEnum"
